# revnet-zero

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_BREAKTHROUGH_EXECUTION_REPORT.md  AUTONOMOUS_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_DEPLOYMENT_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUCCESS.md  AUTONOMOUS_SDLC_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PRODUCTION_READY.md  IMPLEMENTATION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_PUBLICATION_READY.md  SECURITY.md  autonomous_validation_report.json  benchmark.py  comprehensive_quality_report.json  comprehensive_test.py  enhanced_mock_env.py  execute_autonomous_quality_gates.py  mock_torch.py  mock_torch_simple.py  pyproject.toml  quality_gate_report.json  quality_gates_execution_report.json  research_validation_suite.py  run_autonomous_validation.py  run_quality_gates.py  (+16 more)
docs/: ROADMAP.md
docs/adr/: 001-architecture-decision-record-template.md
examples/: __init__.py  autonomous_evolution_demo.py  basic_usage.py  benchmarking.py  demo_advanced_features.py  demo_basic_functionality.py  long_context_training.py  research_breakthrough_demo.py
experiments/: __init__.py  breakthrough_validation.py
revnet_zero/: __init__.py  model.py
revnet_zero/api/: __init__.py  endpoints.py  models.py  versioning.py
revnet_zero/benchmarking/: __init__.py  benchmark_runner.py
revnet_zero/cli/: __init__.py  benchmark.py  convert.py  demo.py  profile.py
revnet_zero/config/: __init__.py  config_manager.py
revnet_zero/core/: __init__.py  autonomous_quality_engine.py  dependency_manager.py  enhanced_error_handling.py  error_handling.py  error_recovery.py  monitoring.py  resilient_error_handling.py  robust_error_handling.py
revnet_zero/deployment/: __init__.py  cloud.py  container.py  enhanced_i18n.py  global_deployment.py  global_deployment_manager.py  global_optimization.py  internationalization.py  monitoring.py  multi_region.py  production_server.py  serving.py
revnet_zero/intelligence/: __init__.py  adaptive_learning.py  autonomous_evolution.py  hypothesis_testing.py  meta_learning_optimizer.py  performance_intelligence.py  research_discovery.py  self_optimization.py
revnet_zero/kernels/: __init__.py  cuda_kernels.py  kernel_manager.py  triton_kernels.py
revnet_zero/layers/: __init__.py  adaptive_reversible_attention.py  coupling_layers.py  hierarchical_attention.py  (+4 more)
tests/: __init__.py  test_coupling_layers.py  test_memory_scheduler.py  test_model_integration.py  test_reversible_attention.py  test_revnet.py
(+57 files in other folders)
