[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revnet-zero"
version = "0.1.0"
description = "Memory-efficient reversible transformers with activation recomputation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
